--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,14 @@
             Conversor de moedas
         </h1>
         <p class="page-subtitle">
-            Descubra os valores em dolar U$
+            Descubra os valores em Real R$
         </p>
         <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-conversor-de-moedas.svg" class="page-logo" alt="">
 
         <div class="container2">
             <form method="post">
                 <fieldset>
-                    <legend>Converter de Real para: </legend>
+                    <legend>Converter da moeda selecionada para Real: </legend>
                     <select name="moeda">
                         <option>Bitcoin</option>
                         <option>Dólar Americano</option>
@@ -42,7 +42,7 @@
 
                 </fieldset>
 
-                <p>Digite o valor a ser convertido em dólares:</p><br>
+                <p>Digite o valor a ser convertido:</p><br>
                 <input type="text" name="valor_a_converter" class="input-padrao" required><br><br>
                 <button type="submit" value="Submit" class="enviar">Enviar</button>
             </form>
