--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         <div class="container2">
             <form method="post">
                 <fieldset>
-                    <legend>Converter da moeda selecionada para Real: </legend>
+                    <legend>Converter de Real para: </legend>
                     <select name="moeda">
                         <option>Bitcoin</option>
                         <option>Dólar Americano</option>
@@ -42,7 +42,7 @@
 
                 </fieldset>
 
-                <p>Digite o valor a ser convertido:</p><br>
+                <p>Digite o valor a ser convertido em dólares:</p><br>
                 <input type="text" name="valor_a_converter" class="input-padrao" required><br><br>
                 <button type="submit" value="Submit" class="enviar">Enviar</button>
             </form>
